--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Intro to JS</title>
+    <script src="./js/test.js"></script>
 </head>
 <body>
     <h1>Intro to JS</h1>
