--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>
         <a href="./day-1">day 1</a>
     </li>
+     <li>
+        <a href="./day-1/luis.html">Luis</a>
+    </li>
 </ul>
 </body>
 </html>
