--- a/day-1/challenge/vinson.html
+++ b/day-1/challenge/vinson.html
@@ -5,6 +5,8 @@
     <title>List</title>
 </head>
 <body>
+<h1>List</h1>
+<p>type in an item and press submit</p>
 
 <script>
     const listInput = document.createElement('input');
