--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <h1>Intro to JS</h1>
+    <span>original repository: <span><a href="https://github.com/geekwisevinson/intro-to-js-feb-2019">intro-to-js-feb-2019</a></span></span>
     <div class="main-holder">
         <div>
             <h2>What we have learned</h2>
