--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
             </ul>
         </div>
     </div>
+
+<div>
+    <div>
+        <h3>External Resources</h3>
+        <ul>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">MDN JavaScript</a></li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
