--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         .main-holder {
             display: flex;
+            margin-top: 1em;
+            margin-bottom: 1em;
 
         }
         .main-holder > * {
