--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             width: 50%;
             padding: 1em;
         }
+
+        .main-holder > * > ul{
+            list-style: none;
+        }
+
+        h4  {
+            margin: 2px;
+        }
     </style>
 </head>
 <body>
@@ -25,28 +33,45 @@
         <div>
             <h2>What we have learned</h2>
             <ul>
-                <li><a href="./1-what-we-learned/declaration.html">Declarations</a></li>
-                <li><a href="./1-what-we-learned/basic-dom.html">Basic Dom</a></li>
+                <li>
+                    <h4>Day1</h4>
+                    <ul>
+                        <li><a href="./1-what-we-learned/declaration.html">Declarations</a></li>
+                        <li><a href="./1-what-we-learned/basic-dom.html">Basic Dom</a></li>
+                    </ul>
+                </li>
             </ul>
+
         </div>
         <div>
             <h2>What we have built</h2>
             <ul>
                 <li>
-                    <a href="./day-1">day 1 - button</a>
-                </li>
-                <li>
-                    <a href="./day-1/challenge/vinson.html">day 1 - challenge</a>
+                    <h4>Day 1</h4>
+                    <ul>
+                        <li>
+                            <a href="./day-1">button</a>
+                        </li>
+                        <li>
+                            <a href="./day-1/challenge/vinson.html">challenge</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
     </div>
 
-<div>
+<div class="main-holder">
     <div>
         <h3>External Resources</h3>
         <ul>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">MDN JavaScript</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3>Simple Thoughts</h3>
+        <ul>
+            <li><a href="./2-things-i-can-do/">What can I do as a programmer?</a></li>
         </ul>
     </div>
 </div>
