--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
         }
         .main-holder > * {
-            border: 1px solid black;
+            box-shadow: 2px 4px 26px 5px rgba(0,0,0,0.75);
             width: 50%;
             padding: 1em;
+            background-color: hsla(180, 100%, 94%, .6);
+            margin: .5em;
         }
 
         .main-holder > * > ul{
@@ -24,11 +26,17 @@
         h4  {
             margin: 2px;
         }
+        li {
+            margin: .3em;
+        }
+        .repo {
+            color: cornflowerblue;
+        }
     </style>
 </head>
 <body>
     <h1>Intro to JS</h1>
-    <span>original repository: <span><a href="https://github.com/geekwisevinson/intro-to-js-feb-2019">intro-to-js-feb-2019</a></span></span>
+    <span class="repo">original repository: <span><a href="https://github.com/geekwisevinson/intro-to-js-feb-2019">intro-to-js-feb-2019</a></span></span>
     <div class="main-holder">
         <div>
             <h2>What we have learned</h2>
