--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
             text-align: center;
             display: inline-block;
             margin: 0 auto;
-            font-family: “Roboto Slab”;
             font-weight: 400;
             font-size: 5em;
-            background: linear-gradient(330deg, #e05252 0%, #99e052 25%, #52e0e0 50%, #9952e0 75%, #e05252 100%);
+            background: linear-gradient(30deg, #e05252 0%, green 25%, cornflowerblue 50%, yellow 75%, moccasin 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            line-height: 200px;
         }
 
         .main-holder {
@@ -31,7 +29,7 @@
             box-shadow: 2px 4px 26px 5px rgba(0,0,0,0.75);
             width: 50%;
             padding: 1em;
-            background-color: hsla(180, 100%, 94%, .6);
+            background-color: cornflowerblue;
             margin: .5em;
         }
 
@@ -116,7 +114,6 @@
 </div>
 
     <script>
-        console.log('one')
         setTimeout(() => {
             const allMoves = document.querySelectorAll('.move');
             allMoves.forEach( item => {
