--- a/day-1/index.html
+++ b/day-1/index.html
@@ -1,44 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Day 1</title>
-    <style>
-    .clicked {
-      background-color: blue;
-      font-size: 90px;
-    }
-  </style>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-  <button onclick="whenClicked()">
-    click me
-  </button>
-<body>
-
-
-
-<script>
-const button = document.getElementsByTagName('button')
-function whenClicked() {
-  console.log (button);
-  button.style.backgroundColor = 'blue';
-  button.style.backgroundColor ='white';
-}
-
-var myVarVariable = 1;
-const myConstVariable = true;
-let myLetVariable = true;
-myLetVariable = false;
-console.log(myLetVariable)
-
-
-</script>\
-
-funtion
-
-
-</body>
-    test
+    <h1>Hello World!</h1>
 </body>
 </html>
