--- a/day-1/sady.html
+++ b/day-1/sady.html
@@ -19,11 +19,10 @@
 
 
 <script>
-const button = document.getElementsByTagName('button')
+const button = document.getElementsByTagName('button')[0]
 function whenClicked() {
   console.log (button);
   button.style.backgroundColor = 'blue';
-  button.style.backgroundColor ='white';
 }
 
 var myVarVariable = 1;
@@ -34,8 +33,6 @@ console.log(myLetVariable)
 
 
 </script>\
-
-funtion
 
 
 </body>
