--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                         <li><a href="./1-what-we-learned/basic-dom.html">Basic Dom</a></li>
                     </ul>
                 </li>
+                <li>
+                    <h4>Day2</h4>
+                    <ul>
+                        <li><a href="./1-what-we-learned/git.html">git</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="right move">
@@ -97,7 +103,6 @@
             </ul>
         </div>
     </div>
-
 <div class="main-holder">
     <div class="down move">
         <h3>External Resources</h3>
