--- a/day-2/index.html
+++ b/day-2/index.html
@@ -6,5 +6,33 @@
 </head>
 <body>
 
+<script>
+  //x+y= answer
+
+  //we need a variable to hold x;
+  let x = 0;
+  //we need a variable to hold y;
+  let y = 0;
+  //we need a variable to hold answer;
+  let answer = 0;
+  //we will need a field to collect input for x;
+  const inputX = document.createElement('input');
+  document.body.appendChild(inputX);
+  inputX.placeholder ='enter x value'
+  inputX.type = 'number';
+  // we will need a field to collect input for y;
+  const inputX = document.createElement('input');
+  document.body.appendChild(inputY);
+  inputY.placeholder ='enter y value'
+  inputY.type = 'number';
+  // we will need a button to tell the computer to do something
+  const button = document.createElement('button');
+  document.body.appendchild(button);
+  button.innerText = '?'
+  // we will need a function to add the variables
+  // we will need to assign the answer variable
+  // we need to tell the user the answer
+</script>
+
 </body>
 </html>
