--- a/experiments/survey.html
+++ b/experiments/survey.html
@@ -10,18 +10,30 @@
     </style>
 </head>
 <body>
+<div style="display: flex">
+    <div style="flex: 1">
+        <h1>Survey</h1>
+        <h3>How much js do you really know?</h3>
+        <h4>On a scale of 0 through 4 how comfortable are you with these?</h4>
+        <h4>0: I never heard of it </h4>
+        <h4>1: I heard of it never used it </h4>
+        <h4>2: I tried to use it didn't work out</h4>
+        <h4>3: I used it and made it work</h4>
+        <h4>4: I used it and I understand it</h4>
+    </div>
+    <div style="flex: 1; justify-content: center; align-items: center">
+        <textarea name="" id="textA" cols="60" rows="12"></textarea>
+        Copy or &nbsp;
+        <a href="javascript:void(0)" download="data.txt">
+            Download Text
+        </a>
+    </div>
 
-<h1>Survey</h1>
-<h3>How much js do you really know?</h3>
-<h4>On a scale of 0 through 4 how comfortable are you with these?</h4>
-<h4>0: I never heard of it </h4>
-<h4>1: I heard of it never used it </h4>
-<h4>2: I tried to use it didn't work out</h4>
-<h4>3: I used it and made it work</h4>
-<h4>4: I used it and I understand it</h4>
-<a href="javascript:void(0)" download="data.txt">
-    Download Text
-</a>
+
+</div>
+
+
+
 <script>
     const body = document.body;
     const questions = [
@@ -107,6 +119,7 @@
         console.group( "Object URL" );
         console.log( "URL:", downloadUrl );
         console.groupEnd();
+        document.querySelector('#textA').value = text;
 
     }
     updateDownloadHref();
