--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <h4>Day 3</h4>
+                    <ul>
+                        <li>
+                            <a href="./day-3/index.html">Calendar</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
@@ -114,6 +122,7 @@
         <h3>Simple Thoughts</h3>
         <ul>
             <li><a href="./2-things-i-can-do/">What can I do as a programmer?</a></li>
+            <li><a href="./experiments/survey.html">Survey</a></li>
         </ul>
     </div>
 </div>
