--- a/experiments/survey.html
+++ b/experiments/survey.html
@@ -46,6 +46,7 @@
         'Can you place an element on the page?',
         'Can you target a single element that is already on a page?',
         'can you target all element that match on a page?',
+        'can you change an elements css properties?',
         'can you loop over an array?',
         'can you select a specific item in an array?',
         'can you tell your code to wait with a set timeout?',
