--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                         <li><a href="./1-what-we-learned/git.html">git</a></li>
                     </ul>
                 </li>
+                <li>
+                    <h4>Day3</h4>
+                    <ul>
+                        <li><a href="./1-what-we-learned/strings.html">strings</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="right move">
