--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li>
                 <h4>Day2</h4>
                 <ul>
-                    <li><a href="./1-what-we-learned/git.html">git</a></li>
+                    <li><a href="./1-what-we-learned/git.html">Git</a></li>
                 </ul>
             </li>
             <li>
