--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <ul>
                     <li><a href="./1-what-we-learned/strings.html">Strings</a></li>
                     <li><a href="./1-what-we-learned/numbers.html">Numbers</a></li>
+                    <li><a href="./1-what-we-learned/dates.html">Dates</a></li>
                 </ul>
             </li>
         </ul>
